--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "axios": "^1.12.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^7.9.3",
+    "react-router": "^7.9.4",
     "yup": "^1.7.1"
   },
   "devDependencies": {
